name:               joyfulmantis-github-io-src
version:            0.1.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.8.0
  ghc-options:      -threaded
  default-language: Haskell2010
